TestSuite/PascalABCTests/errors/err0363_T_T.pas
type
  T<T> = class
    public T: T;
  end;
  
begin
  
end.